--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,13 @@
-name: adamantite
+name: build
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     types: [opened, synchronize, reopened]
+  workflow_run:
+    workflows: ["test"]
+    branches: [main]
+    types:
+      - completed
 
 permissions:
   contents: read
@@ -15,25 +17,15 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  verify:
-    name: ${{ matrix.name }}
+  build:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - name: lint
-            command: bun run check
-          - name: format
-            command: bun run format --check
-          - name: types
-            command: bun run typecheck
-          - name: analyze
-            command: bun run analyze
+    if: >-
+      github.event_name == 'pull_request' ||
+      github.event.workflow_run.conclusion == 'success'
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup Bun
@@ -52,5 +44,5 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: Run ${{ matrix.name }}
-        run: ${{ matrix.command }}
+      - name: Build
+        run: bun run build
