--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   workflow_run:
-    workflows: ["adamantite"]
+    workflows: ["build"]
     branches: [main]
     types:
       - completed
