--- a/package.json
+++ b/package.json
@@ -56,15 +56,12 @@
     "@changesets/cli": "2.29.8",
     "@clack/prompts": "0.11.0",
     "@types/bun": "1.3.5",
-    "@typescript/native-preview": "7.0.0-dev.20260108.1",
     "adamantite": "^0.25.0",
     "bunup": "0.16.17",
     "knip": "5.80.1",
     "oxfmt": "0.23.0",
     "oxlint": "1.38.0",
-    "oxlint-tsgolint": "0.10.1"
-  },
-  "peerDependencies": {
+    "oxlint-tsgolint": "0.10.1",
     "typescript": "^5.9.3"
   },
   "packageManager": "bun@1.3.1"
